--- a/apps/jokes/src/app/app.component.html
+++ b/apps/jokes/src/app/app.component.html
@@ -1,1 +1,6 @@
+<mat-toolbar class="mat-elevation-z2 mb-5">
+  <div class="container mx-auto">
+    <h2 class="text-xl">#DadJokes</h2>
+  </div>
+</mat-toolbar>
 <router-outlet></router-outlet>
