--- a/libs/feature/random/src/lib/random.component.html
+++ b/libs/feature/random/src/lib/random.component.html
@@ -1,1 +1,36 @@
-<p>random works!</p>
+<ng-container *ngIf="randomStore.vm$ | async as vm">
+  <div class="container mx-auto">
+    <div class="flex w-full justify-between py-3 items-center">
+      <h3 class="text-2xl">Random dad joke:</h3>
+      <button
+        mat-raised-button
+        color="accent"
+        (click)="randomStore.fetchRandomJoke()"
+      >
+        New Joke
+      </button>
+    </div>
+    <mat-card>
+      <mat-card-content class="mb-3">
+        <span *ngIf="vm.loaded">
+          {{ vm.joke?.joke }}
+        </span>
+      </mat-card-content>
+      <mat-progress-bar
+        *ngIf="vm.loading"
+        color="accent"
+        mode="indeterminate"
+      ></mat-progress-bar>
+      <mat-card-actions class="border-t">
+        <button
+          mat-raised-button
+          class="w-full"
+          color="primary"
+          (click)="copyText(vm.joke?.joke ?? '')"
+        >
+          COPY
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</ng-container>
