--- a/apps/jokes/src/app/app.component.html
+++ b/apps/jokes/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="mat-elevation-z2 mb-5">
+<mat-toolbar class="mat-elevation-z2 mb-5 h-12">
   <div class="container mx-auto">
     <h2 class="text-xl">#DadJokes</h2>
   </div>
