--- a/libs/feature/random/src/lib/random.component.html
+++ b/libs/feature/random/src/lib/random.component.html
@@ -3,7 +3,7 @@
     <div class="flex w-full justify-between py-3 items-center">
       <h3 class="text-2xl">Random dad joke:</h3>
       <button
-        mat-raised-button
+        mat-flat-button
         color="accent"
         (click)="randomStore.fetchRandomJoke()"
       >
@@ -23,7 +23,7 @@
       ></mat-progress-bar>
       <mat-card-actions class="border-t">
         <button
-          mat-raised-button
+          mat-stroked-button
           class="w-full"
           color="primary"
           (click)="copyText(vm.joke?.joke ?? '')"
